--- a/src/App.css
+++ b/src/App.css
@@ -290,6 +290,7 @@ button:hover {
   background-color: var(--background-color);
   color: var(--text-color);
   transition: background-color 0.3s ease, color 0.3s ease;
+  overflow-y: hidden;
 }
 
 .night-mode .search-date-container {
